@startuml
title High-Level Architecture
skinparam packageStyle rectangle
skinparam shadowing false

package "External Boundary" {
  class ExternalSource
  class ExternalAdapter
  class ProcessingKeyboardAdapter
}

package "Input" {
  class PointerEvent
  class KeyboardEvent
  class KeyboardState
  class InputManager
  interface InputLayer
  class "...InputAdapter" as ControlInputAdapter
  class FocusManager
}

package "Public API" {
  interface Control
  class "Button / Slider / ..." as PublicFacade
}

package "MVVM Internals" {
  class Model
  class ViewModel
  class View
  class ViewState
}

package "Rendering" {
  class Style
  class RenderStyle
  class Renderer
}

package "Theme" {
  class Sketch
  interface ThemeProvider
  class ThemeManager
  class ThemeSnapshot
  class ThemeTokens
}

package "JSON Configuration" {
  class JsonDocument
  class ControlConfigLoader
  class ControlFactoryRegistry
  class "Map<String, Control>" as ControlMap
}

package "Composition" {
  class SketchBinding
}

ExternalSource --> ExternalAdapter : raw input
ExternalAdapter --> PointerEvent : creates
ExternalAdapter --> KeyboardEvent : creates
ExternalAdapter --> KeyboardState : updates
ProcessingKeyboardAdapter --> InputManager : dispatches keyboard

InputManager --> InputLayer : ordered dispatch
InputLayer --> PublicFacade : forwards to concrete facade API
PublicFacade --> ControlInputAdapter : delegates input
ControlInputAdapter --> View : uses geometry
ControlInputAdapter --> ViewModel : updates interaction
FocusManager --> ViewModel : focus ownership

PublicFacade ..|> Control
PublicFacade --> Model
PublicFacade --> ViewModel
PublicFacade --> View
ViewModel --> Model : updates
View --> ViewModel : reads
View --> ViewState : builds
View --> Style : delegates drawing
Style --> ThemeSnapshot : consumes
Style --> ViewState : resolves
Style --> RenderStyle : creates
Renderer --> RenderStyle : draws

Sketch --> ThemeManager : owns
ThemeManager ..|> ThemeProvider
ThemeManager --> ThemeSnapshot : rebuilds on setTheme()
ThemeSnapshot --> ThemeTokens
Style --> ThemeProvider : reads current snapshot

JsonDocument --> ControlConfigLoader : controls[]
ControlConfigLoader --> ControlFactoryRegistry : dispatches by type
ControlFactoryRegistry --> PublicFacade : creates closed facades
ControlConfigLoader --> ControlMap : returns ordered map

SketchBinding --> PublicFacade : explicit listeners
SketchBinding ..> JsonDocument : JSON has no binding
@enduml
